--- a/userspace/ksud/Cargo.toml
+++ b/userspace/ksud/Cargo.toml
@@ -10,19 +10,22 @@ rust-version = "1.77.2"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 const_format = "0.2"
-zip = { version = "2.1.6", default-features = false }
-zip-extensions = { version = "0.8.1", features = [
+zip = { version = "2.1.5", features = [
     "deflate",
     "deflate64",
+    "bzip2",
     "time",
+    "zstd",
     "lzma",
     "xz",
 ], default-features = false }
-java-properties = { git = "https://github.com/Kernel-SU/java-properties.git", branch = "master", default-features = false }
+zip-extensions = "0.8"
+java-properties = "2"
 log = "0.4"
 env_logger = { version = "0.11", default-features = false }
 serde = { version = "1" }
 serde_json = "1"
+regex = "1"
 encoding_rs = "0.8"
 retry = "2"
 humansize = "2"
@@ -43,7 +46,6 @@ sha1 = "0.10"
 tempdir = "0.3"
 chrono = "0.4"
 hole-punch = { git = "https://github.com/tiann/hole-punch" }
-regex-lite = "0.1.6"
 
 [target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
 rustix = { git = "https://github.com/Kernel-SU/rustix.git", branch = "main", features = [
@@ -55,7 +57,7 @@ procfs = "0.16"
 loopdev = { git = "https://github.com/Kernel-SU/loopdev" }
 
 [target.'cfg(target_os = "android")'.dependencies]
-android_logger = { version = "0.14", default-features = false }
+android_logger = "0.14"
 
 [profile.release]
 strip = true
